[package]
name = "protocol-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.64", optional = true }
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "io-util" ], optional = true }
anyhow = "1.0.69"
cfg-if = "1.0.0"
varint = "0.9.0"
byteorder = "1.4.3"
serde = "1.0.156"
serde_json = "1.0.94"

[features]
packet = [ ]
rw = []
rw-sync = [ "rw" ]
rw-async-tokio = [ "rw", "dep:async-trait", "dep:tokio"] 
readable = [ "rw" ]
writeable = [ "rw" ]