[package]
name = "protocol-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
async-trait = { version = "0.1.64", optional = true }
syn = { version = "1.0.109", features = [ "proc-macro" ] }
protocol-core = { path = "../protocol-core", optional = true }
anyhow = "1.0.69"
proc-macro2 = "1.0.51"
quote = "1.0.23"
cfg-if = "1.0.0"

[features]
sync = ["dep:protocol-core", "protocol-core?/sync"]
async = ["dep:protocol-core", "protocol-core?/async", "dep:async-trait" ]
read = ["dep:protocol-core", "protocol-core?/read"]
write = ["dep:protocol-core", "protocol-core?/write"]


