[package]
name = "protocol-packets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol-core = { path = "../protocol-core" }
protocol-derive = { path = "../protocol-derive" }
anyhow = "1.0.69"
trust-dns-resolver = "0.22.0"
integer-encoding = "3.0.4"
bytes = "1.4.0"
serde = { version = "1.0.155", features = [ "derive" ] }
serde_json = "1.0.94"
async-trait = { version = "0.1.66", optional = true }
tokio = {version = "1.26.0", optional = true }
uuid = "1.3.0"

[features]
default = [ "read", "write", "sync" ]
read = [ "protocol-core/read", "protocol-derive/read" ]
write = [ "protocol-core/write", "protocol-derive/write" ]
sync = [ "protocol-core/sync", "protocol-derive/sync" ]
async = [ "protocol-core/async", "protocol-derive/async", "dep:async-trait", "dep:tokio" ]