[package]
name = "async-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol-packets = { path = "../../crates/protocol-packets", default-features = false, features = [ "read", "write", "async" ] }
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "macros" ] }